[package]
name = "watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
# cargo add --path ../rust_bpf/rust/lib
bpf-lib = { version = "0.1.0", path = "../rust_bpf/rust/lib" }
moka = { version = "0.12", features = ["future"] }
prost = "0.13"
redb = "2.4.0"
tokio = { version = "1.4", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
log = "0.4"
nix = { version = "0.29", features = ["fs"] }

[build-dependencies]
prost-build = "0.13"
